opam-version: "2.0"
version: "0.8"
maintainer: "filliatr@lri.fr"
authors: [
  "Jean-Christophe Filliâtre"
  "François Bobot"
]
homepage: "https://www.lri.fr/~filliatr/creal.fr.html"
dev-repo: "git://github.com/backtracking/creal"
bug-reports: "https://github.com/backtracking/creal/issues"
license: "LGPL-2.1"
build: [
  [ "dune" "build" "--for-release-of-packages" "CReal" "-j" jobs ]
  [ "dune" "runtest" "--for-release-of-packages" "CReal" "-j" jobs] { with-test }
]

depends: [
  "dune" {build}
  "zarith"
  "ocaml" { >= "4.02.3" }
]

synopsis: "Library of computational real, allows to compute a real at specified precision. Equality is not terminating"
